--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/roboto.css">
     <link rel="manifest" href="%PUBLIC_URL%/app/manifest.json">
-    <title>ESP8266 React</title>
+    <title>ESP DSMR</title>
   </head>
   <body>
     <noscript>
